Trabalhando Redirecionamentos e JSTL no pom

--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,10 @@
 			<scope>provided</scope>
 		</dependency>
 
+    <!-- JSTL --> 
     <dependency>
-      <groupId>javax.servlet.jsp.jstl</groupId>
-      <artifactId>jstl-api</artifactId>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
   
